recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: not found: value steps
	droite(360/steps);
                   ^Koch:16: error: not found: value steps
	gauche(360/steps);
                   ^